New Theme, moved links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<script>
 		$(document).ready(function(){
 			width = $(window).width(); 
-			if (width >= 450) {
+			if (width >= 745) {
 				mobileMenuOn = false;
 			} else { 
 				mobileMenuOn = true; 
@@ -156,7 +156,7 @@
 		$(window).resize(function() {
   			// This will execute whenever the window is resized
   			width = $(window).width(); // New width
-  			if (width >= 450) {
+  			if (width >= 745) {
   				mobileMenuOn = false;
   				toggleMobileMenuOff();
   			} else {
@@ -184,14 +184,21 @@
 	<div class = "selectStart" id = "select">
 		<div class = "mobileStart" id = "mobile">
 				Menu
+
 		</div>
 
 		<ul id = "nav">
+
+			<li><a href="https://www.linkedin.com/in/austenmadden/"><i class="fa fa-linkedin fa-1x"></i></a></li>
+			<li><a href="https://github.com/austenmadden/"><i class="fa fa-github fa-1x"></i></a></li>
+			<li><a href="https://steamcommunity.com/profiles/76561198022783849"><i class="fa fa-steam fa-1x"></i></a></li>
+			<li><a href="https://twitter.com/aus10madden"><i class="fa fa-twitter fa-1x"></i></a></li>
+			<li id="linkEnd"><a href="http://codepen.io/austenmadden/"><i class="fa fa-codepen fa-1x"></i></a></li>
+
 			<li id = "about">About</li>
 			<li id = "experience">Experience</li>
 			<li id = "projects">Projects</li>
 			<li id = "skills">Skills</li>
-			<li id = "social"> Social</li>
 		</ul>
 	</div>
 	<div class = "content" id = "contentContainer">
@@ -278,14 +285,14 @@
 			</div>
 			<div class = "social">
 				<ul>
-				<li><a href="https://www.linkedin.com/in/austenmadden/"><i class="fa fa-linkedin fa-5x"></i></a></li>
-				<li><a href="https://github.com/austenmadden/"><i class="fa fa-github fa-5x"></i></a></li>
+				<li><a href="https://www.linkedin.com/in/austenmadden/"><i class="fa fa-linkedin fa-1x"></i></a></li>
+				<li><a href="https://github.com/austenmadden/"><i class="fa fa-github fa-1x"></i></a></li>
 
-				<li><a href="https://steamcommunity.com/profiles/76561198022783849"><i class="fa fa-steam fa-5x"></i></a></li>
+				<li><a href="https://steamcommunity.com/profiles/76561198022783849"><i class="fa fa-steam fa-1x"></i></a></li>
 
-				<li><a href="https://twitter.com/aus10madden"><i class="fa fa-twitter fa-5x"></i></a></li>
+				<li><a href="https://twitter.com/aus10madden"><i class="fa fa-twitter fa-1x"></i></a></li>
 
-				<li><a href="http://codepen.io/austenmadden/"><i class="fa fa-codepen fa-5x"></i></a></li>
+				<li><a href="http://codepen.io/austenmadden/"><i class="fa fa-codepen fa-1x"></i></a></li>
 
 				
 			</ul>
