--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
 			<div class = "landing">
 				<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-				<h1>Hello I'm Austen Madden</h1>
+				<h1>Hello, I'm Austen Madden</h1>
 			</div>
 
 			<div class = "bio">
