Altered Concepts section

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 			<div class = "skills">
 				<h1>Skills</h1>
 				<h2 style="color:white">Languages</h2> <p>Java, C#, Apex, HTML, CSS, JavaScript, SQL, XML, JSON, and C</p>
-				<h2 style="color:white">Concepts</h2> <p>Object Oriented Programming, SOAP, REST, Agile</p> 
+				<h2 style="color:white">Concepts</h2> <p>Object Oriented Programming, REST, Regex, Agile</p> 
 				<h2 style="color:white">Frameworks</h2> <p>Android, Linux, OSX, Microsoft Windows, .Net MVC, Salesforce</p>
 			</div>
 			<div class = "social">
