--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 				
 				<h1 style = "color:white">About</h1>
 				
-				<p>I'm Austen Madden, a software developer from Columbus, Ohio. In December I'll be finishing up my undergraduate studies at the Ohio State University, with my major in Computer Science & Engineering. In Summer 2015, I started with JPMorgan Chase as an Android Developer and currently work there part time; Primarily I'm interested in mobile developement but do occasionally tinker and explore other technology (including web). 
+				<p>I'm Austen Madden, a software developer from Columbus, Ohio. I graduated from Ohio State in 2015 with a Bachelor of Science in Computer Science & Engineering. Primarily I'm interested in web and mobile developement but do occasionally tinker and explore other technology (The "If it fits, I sits" approach). 
 
 				Outside of software, I enjoy games and outdoorsy activities like backpacking. Like games too? Feel free to add me on steam: Maddahain. I'm also learning to play the banjo, which is a pretty rad instrument. </P>
 			</div>
