Updated Job Information

--- a/index.html
+++ b/index.html
@@ -233,18 +233,18 @@
 					<div class = "jobTitle"><b>Intern, Applications developement</b> - January, 2015 to May, 2015 </div>	
 									
 					<p>
-						Applications Development Intern, working primarily on Java Web Services and Salesforce Instances for Nationwide Direct Growth Solutions IT team.
+						Applications Development Intern, working primarily on Salesforce Instances for Nationwide Direct Growth Solutions IT team.
 				    </p>
 					
 					<div class = "company">Nationwide Insurance</div>
 					<div class = "jobTitle"><b>Business Consulting Intern</b> - May, 2014 to December, 2014 </div>	
 
 					<p>
-						Lead developer for Nationwide Innovative Solutions – Employee Benefits division after position was vacated (interim).
+						Sole developer for Nationwide Employee Benefits after position was vacated (interim).
 						Managed, developed, and maintained new and existing projects, on companies Salesforce CRM platform.
 						Primarily developed using APEX, Visualforce, Javascript, CSS, SOQL, and HTML.
 						Created case and service issue app to help track and manage customer issues.
-						Developed automatic document generation application.
+						Developed and maintained automatic document generation application.
 					</p>
 			</div>
 
