--- a/index.html
+++ b/index.html
@@ -250,6 +250,14 @@
 
 			<div class = "projects">
 				<h1> Projects </h1>
+
+				<h2 style= color:white>
+					Android OCR
+			   </h2>
+				
+				<p>	
+					Developed Android app to recognize text input from images and perform SQL queries against database.
+				</p>
 				
 				<h2 style= color:white>
 					Intelligent Mixed Reality
