--- a/index.html
+++ b/index.html
@@ -215,9 +215,7 @@
 				
 				<h1 style = "color:white">About</h1>
 				
-				<p>I'm Austen Madden, a software developer from Columbus, Ohio. I graduated from Ohio State in 2015 with a Bachelor of Science in Computer Science & Engineering. Primarily I'm interested in web and mobile developement but do occasionally tinker and explore other technology (The "If it fits, I sits" approach). 
-
-				Outside of software, I enjoy games and outdoorsy activities like backpacking. Like games too? Feel free to add me on steam: Maddahain. I'm also learning to play the banjo, which is a pretty rad instrument. </P>
+				<p>A software developer from Columbus, Ohio. I graduated from Ohio State in 2015 with my B.S. in Computer Science & Engineering. My interests lie in web and mobile development. Outside of software, I enjoy games and outdoor activities like backpacking. Occasionally, I have been known to play a banjo.</P>
 			</div>
 
 			<div class = "companies">
