Added CoverMyMeds, social links for mobile, prep for company images

--- a/index.html
+++ b/index.html
@@ -220,6 +220,12 @@
 
 			<div class = "companies">
 				<h1> Work Experience </h1>
+
+					<div class = "company">CoverMyMeds</div>
+					<div class = "jobTitle"><b>Software Developer Apprentice</b> - January, 2016 to Present </div>	
+					<p>
+						Software developer working on a variety of projects in the Ruby programming language (Rails and Command Line).
+					</p>
 				
 					<div class = "company">J.P Morgan Chase & Co</div>
 					<div class = "jobTitle"><b>Technology Analyst Intern</b> - June, 2015 to Dec, 2015 </div>	
@@ -275,23 +281,18 @@
 			</div>
 			<div class = "skills">
 				<h1>Skills</h1>
-				<h2 style="color:white">Languages</h2> <p>Java, C#, Apex, HTML, CSS, JavaScript, SQL, XML, JSON, and C</p>
-				<h2 style="color:white">Concepts</h2> <p>Object Oriented Programming, REST, Regex, Agile</p> 
-				<h2 style="color:white">Frameworks</h2> <p>Android, Linux, OSX, Microsoft Windows, .Net MVC, Salesforce</p>
+				<h2 style="color:white">Languages</h2> <p>Java, C#, Ruby, CSS, JavaScript, SQL, HTML, XML, JSON, and C</p>
+				<h2 style="color:white">Concepts</h2> <p>Object Oriented Programming, REST, Regular Expressions (Regex), Agile</p> 
+				<h2 style="color:white">Frameworks</h2> <p>Android, Linux, OSX, Microsoft Windows, .Net MVC, Ruby on Rails, Salesforce</p>
 			</div>
 			<div class = "social">
 				<ul>
-				<li><a href="https://www.linkedin.com/in/austenmadden/"><i class="fa fa-linkedin fa-1x"></i></a></li>
-				<li><a href="https://github.com/austenmadden/"><i class="fa fa-github fa-1x"></i></a></li>
-
-				<li><a href="https://steamcommunity.com/profiles/76561198022783849"><i class="fa fa-steam fa-1x"></i></a></li>
-
-				<li><a href="https://twitter.com/aus10madden"><i class="fa fa-twitter fa-1x"></i></a></li>
-
-				<li><a href="http://codepen.io/austenmadden/"><i class="fa fa-codepen fa-1x"></i></a></li>
-
-				
-			</ul>
+					<li><a href="https://www.linkedin.com/in/austenmadden/"><i class="fa fa-linkedin fa-2x"></i></a></li>
+					<li><a href="https://github.com/austenmadden/"><i class="fa fa-github fa-2x"></i></a></li>
+					<li><a href="https://steamcommunity.com/profiles/76561198022783849"><i class="fa fa-steam fa-2x"></i></a></li>
+					<li><a href="https://twitter.com/aus10madden"><i class="fa fa-twitter fa-2x"></i></a></li>
+					<li><a href="http://codepen.io/austenmadden/"><i class="fa fa-codepen fa-2x"></i></a></li>
+				</ul>
 			</div>
 
 		</div>
