--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			</div>
 
 			<div class = "companies">
-				<h1> Work Experience </h1>
+				<h1>Experience</h1>
 
 					<div class = "company">CoverMyMeds</div>
 					<div class = "jobTitle"><b>Software Developer</b> - June, 2016 to
