Fixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<div class = "jobTitle"><b>Software Developer</b> - June, 2016 to
 						Present </div>
 					<p>
-						Continuation and expansion of old responsabilities.
+						Continuation and expansion of old responsibilities.
 					</p>
 
 					<div class = "jobTitle"><b>Software Developer Apprentice</b> -
