Fixed spelling error

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
 				<p>
 					A software developer from Columbus, Ohio. I graduated from Ohio State
-					in 2015 with my B.S. in Computer Science & Engineering. I'm intered in
-					web and mobile development. Outside of software, I enjoy games,
+					in 2015 with my B.S. in Computer Science & Engineering. I'm interested
+					in web and mobile development. Outside of software, I enjoy games,
 					outdoor activities like backpacking and music (I tinker with banjo
 					and guitar).
 				</P>
