Removed whitespace, added text shadow, centered landing page text (don't know why I liked it off center

--- a/index.html
+++ b/index.html
@@ -18,31 +18,22 @@
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
 	  ga('create', 'UA-77149006-1', 'auto');
 	  ga('send', 'pageview');
-
 	</script>
-
 		<title>Austen Madden</title>
 	</head>
-
 	<body>
-
 	<div class = "selectStart" id = "select">
 		<div class = "mobileStart" id = "mobile">
 				Menu
-
 		</div>
-
-		<ul id = "nav">
-
+		<ul id = "nav" class = "shadow">
 			<li><a href="https://www.linkedin.com/in/austenmadden/"><i class="fa fa-linkedin fa-1x"></i></a></li>
 			<li><a href="https://github.com/austenmadden/"><i class="fa fa-github fa-1x"></i></a></li>
 			<li><a href="https://steamcommunity.com/profiles/76561198022783849"><i class="fa fa-steam fa-1x"></i></a></li>
 			<li><a href="https://twitter.com/aus10madden"><i class="fa fa-twitter fa-1x"></i></a></li>
 			<li id="linkEnd"><a href="http://codepen.io/austenmadden/"><i class="fa fa-codepen fa-1x"></i></a></li>
-
 			<li id = "about">About</li>
 			<li id = "experience">Experience</li>
 			<li id = "projects">Projects</li>
@@ -50,18 +41,13 @@
 		</ul>
 	</div>
 	<div class = "content" id = "contentContainer">
-
 		<div class = "about">
-
 			<div class = "landing">
 				<h1>Hello, I'm Austen Madden</h1>
 			</div>
-
 			<div class = "bio">
 				<img class="img-circle" src="img/headshot.jpg"></img>
-
 				<h1 style = "color:white">About</h1>
-
 				<p>
 					A software developer from Columbus, Ohio. I graduated from Ohio State
 					in 2015 with my B.S. in Computer Science & Engineering. I'm interested
@@ -70,10 +56,8 @@
 					and guitar).
 				</P>
 			</div>
-
 			<div class = "companies">
 				<h1>Experience</h1>
-
 					<div class = "company">CoverMyMeds</div>
 					<div class = "jobTitle"><b>Software Developer</b> - June, 2016 to
 						Present </div>
@@ -96,19 +80,15 @@
 						well as Chase web applications (hybrid). Developed primarily using
 						Java, XML, Javascript, CSS, and HTML.
 					</p>
-
 					<div class = "company">Nationwide Insurance</div>
 					<div class = "jobTitle"><b>Intern, Applications developement</b> -
 						January, 2015 to May, 2015 </div>
-
 					<p>
 						Applications Development Intern, working primarily on Salesforce
 						Instances for Nationwide Direct Growth Solutions IT team.
 				    </p>
-
 					<div class = "jobTitle"><b>Business Consulting Intern</b> - May, 2014
 						to December, 2014 </div>
-
 					<p>
 						Sole developer for Nationwide Employee Benefits after position was
 						vacated (interim).Managed, developed, and maintained new and
@@ -119,33 +99,26 @@
 						generation application.
 					</p>
 			</div>
-
 			<div class = "projects">
 				<h1> Projects </h1>
-
 				<h2>
 					Android OCR
 			   </h2>
-
 				<p>
 					Developed Android app to recognize text input from images and perform
 					SQL queries against database.
 				</p>
-
 				<h2>
 					Intelligent Mixed Reality
 			   </h2>
-
 				<p>
 					Developed a .Net MVC 5 Web Application for MS SQL database management.
 					 Used a combination of web languages (Javascript, CSS, HTML) and C# to
 					deliver a modern frontend.
 				</p>
-
 				<h2>
 					Code For Good
 			   </h2>
-
 				<p>
 					Competed in Chase Code for Good hackathon event, and worked with a team to design application for the American Red Cross using the PHP Yii framework.
 				</p>
@@ -165,10 +138,7 @@
 					<li><a href="http://codepen.io/austenmadden/"><i class="fa fa-codepen fa-2x"></i></a></li>
 				</ul>
 			</div>
-
 		</div>
-
 	</div>
-
 	</body>
 </html>
