Landing text scrolls till top of image, first impl

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class = "content" id = "contentContainer">
     <div class = "about">
       <div class = "landing">
-        <h1>Hello, I'm Austen Madden</h1>
+        <h1 id = "welcome" class="landingScrollText">Hello, I'm Austen Madden</h1>
       </div>
       <div class = "bio">
         <img class="img-circle" src="img/headshot.jpg"></img>
