Remove markup languages (as a friend pointed out is a little college resume style padding.

--- a/index.html
+++ b/index.html
@@ -146,10 +146,7 @@
                                                     JavaScript,
                                                     C,
                                                     CSS,
-                                                    SQL,
-                                                    HTML,
-                                                    XML,
-                                                    JSON</p>
+                                                    SQL</p>
           <h2 style="color:white">Concepts</h2> <p>Object Oriented Programming,
                                                    REST,
                                                    Regular Expressions (Regex),
@@ -158,9 +155,8 @@
                                                           Android
                                                           Linux,
                                                           OSX,
-                                                          Microsoft Windows,
-                                                          .Net MVC,
-                                                          Salesforce</p>
+                                                          Windows,
+                                                          .Net MVC</p>
         </div>
         <div class = "social">
           <ul>
