Jekyll ALL THE THINGS

--- a/index.html
+++ b/index.html
@@ -26,14 +26,26 @@
     <title>Austen Madden</title>
   </head>
   <body>
-    <h1>Austen Madden</h1>
-    <div>
-      <ul class='inline unstyled'>
-        <li><a href='#'>Github</a></li>
-        <li><a href='#'>Linkedin</a></li>
-        <li><a href='#'>Twitter</a></li>
-        <li><a href='#'>Email</a></li>
-      </ul>
+    <div class='flex'>
+      <div class='panel'>
+        <div class='center'>
+          <h1>Austen Madden</h1>
+        </div>
+      </div>
+      <div class='panel'>
+        <div class='center'>
+          <ul class='inline unstyled'>
+            <li><a href='https://github.com/austenmadden'>
+              <i class='fa fa-github fa-3x'></i></a></li>
+            <li><a href='https://www.linkedin.com/in/austenmadden/'>
+              <i class='fa fa-linkedin fa-3x'></i></a></li>
+            <li><a href='https://twitter.com/aus10madden'>
+              <i class='fa fa-twitter fa-3x'></i></a></li>
+            <li><a href='mailto:maddenausten@gmail.com'>
+              <i class='fa fa-envelope fa-3x'></i></a></li>
+          </ul>
+        </div>
+      </div>
     </div>
   </body>
 </html>
